GearsetPOC/force-app/main/default/objects/Loyalty_Integration__e/Loyalty_Integration__e.object-meta.xml
<CustomObject>
    <label>Loyalty Integration</label>
    <pluralLabel>Loyalty Integrations</pluralLabel>
</CustomObject>