GearsetPOC/force-app/main/default/objects/Loyalty_Integration__e/fields/AccountRecordId__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordId__c</fullName>
    <label>Account Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>