GearsetPOC/force-app/main/default/objects/Loyalty_Integration__e/fields/DeltaLoyaltyTier__c.field-meta.xml
<CustomField>
    <fullName>DeltaLoyaltyTier__c</fullName>
    <label>Delta Loyalty Tier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>