GearsetPOC/force-app/main/default/objects/Loyalty_Integration__e/fields/EnrollmentDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentDate__c</fullName>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>