GearsetPOC/force-app/main/default/objects/Loyalty_Integration__e/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>First Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>