GearsetPOC/force-app/main/default/objects/Loyalty_Integration__e/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Last Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>