GearsetPOC/force-app/main/default/objects/Loyalty_Integration__e/fields/MembershipNumber__c.field-meta.xml
<CustomField>
    <fullName>MembershipNumber__c</fullName>
    <label>Membership Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>