GearsetPOC/force-app/main/default/objects/Loyalty_Integration__e/fields/MemberStatus__c.field-meta.xml
<CustomField>
    <fullName>MemberStatus__c</fullName>
    <label>Member Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>